# binary-search-implementations

./: .gitignore  LICENSE  README.md
C++20/: .clang-format  CMakeLists.txt  auto-format.sh
C++20/include/: binary_search.hpp  binary_search_alternative.hpp  binary_search_eytsinger.hpp  binary_search_power.hpp  binary_search_range.hpp  binary_search_signed_traditional.hpp  binary_search_traditional1.hpp  binary_search_traditional2.hpp  binary_search_unsigned_traditional.hpp  helper.hpp
C++20/src/: helper.cc  main.cpp
C++20/src/benchmark/: benchmark.C  benchmark.cpp
C++20/src/bs/: alternative.cc  binary_search.cc  power.cc  range.cc  signed_traditional.cc  unsigned_traditional.cc
C++20/src/unittest/: binary_search_tests.cpp  utility_tests.cpp
Rust/: Cargo.toml
Rust/benches/: benchmarks.rs
Rust/src/: lib.rs
Rust/src/binary_search/: mod.rs
Rust/src/binary_search/alternative/: mod.rs
Rust/src/binary_search/eytzinger/: mod.rs
Rust/src/binary_search/power/: mod.rs
Rust/src/binary_search/range/: mod.rs
Rust/src/binary_search/traditional/: mod.rs
Rust/src/helpers/: mod.rs
Rust/tests/: bin.rs
Rust/tests/dynamic_tests/: mod.rs
Rust/tests/helpers/: mod.rs
Rust/tests/panic_or_timeout_tests/: mod.rs
Rust/tests/small_index_tests/: correctness_tests.rs  mod.rs  panic_or_timeout_tests.rs
Rust/tests/static_tests/: mod.rs
Rust/tests/testing/: mod.rs
Rust/tests/utility_tests/: mod.rs
